overflow fixes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,12 +4,12 @@
 
 .main {
     min-height: 100vh;
-    padding: 0 0 4rem;
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 20px 4rem;
 }
 
 .footer {
@@ -229,6 +229,23 @@
     border-radius: 8px;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.referralBox {
+    margin-top: 1rem;
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    flex-direction: column;
+}
+
+@media (max-width: 600px) {
+    .referralBox {
+        width: 100%
+    }
 }
 
 .mintText {
